<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_user_name"/>

        <EditText
            android:id="@+id/edt_user"
            android:enabled="false"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:background="@drawable/back_text"
            android:text="admin"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_user_pass"/>

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:background="@drawable/text_stroke"
            android:gravity="center"
            android:text="12"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_user_pass1"/>

        <EditText
            android:id="@+id/edt_pass1"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:gravity="center"
            android:background="@drawable/text_stroke"
            android:text="12"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_user_pass2"/>

        <EditText
            android:id="@+id/edt_pass2"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="12"
            android:background="@drawable/text_stroke"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_select"
        android:textColor="@color/white"
        android:text="@string/save"/>
</LinearLayout>